# torch-naut

./: .gitignore  .gitmodules  .readthedocs.yaml  README.md  env.yml  pyproject.toml
.github/workflows/: python-package.yml
disconets/: README.md  preprocess.py  run.sh  run_wcrps.py  run_wcrps_ens.py
docs/: Makefile  requirements.txt
docs/source/: conf.py  index.rst  modules.rst  torchnaut.rst
examples/: 1_intro_crps.ipynb  2_intro_mdn.ipynb  3_compare_epistemic.ipynb  4_weighted_crps.ipynb  intro_crps_byom.ipynb
lib/: bnn.py  crps.py  ensembles.py  mdn.py  utils.py
mona/: README.md  crps_lmh.py  crps_mh.py  crps_simple.py  crps_weighted.py  mdn.py  run.sh
multivariate/: README.md  plot_mnist.ipynb  plot_paraboloid.ipynb  run.sh  run_crps.py  run_crps_weighted.py  run_mdn_10.py  run_mdn_100.py  run_mnist.py
multivariate/mnist_data/: preprocess.ipynb  unzip.sh
tests/: sample_test.py  test_epsilon_sampler.py  test_mdn.py  test_utils.py
torchnaut/: crps.py  kde.py  mdn.py  utils.py
uci/: README.md  eval_calibration.ipynb  eval_scaling.ipynb  eval_scores.ipynb  run.sh  run_bnn_lv.py  run_disco.py  run_ensembles.py  run_ensembles_gelu.py  run_mdn.py  run_mdn_bnn.py  run_mdn_bnn_gelu.py  run_mdn_gelu.py  run_wcrps.py  run_wcrps_ens.py  run_wcrps_ens_mh.py  run_wcrps_ens_mh_ml.py  run_wcrps_mh.py  run_wcrps_mh_ml.py  run_wcrps_samples.sh  scaling.py
uci/results/bnn_lv/: scores.csv  time.txt
uci/results/crps/: scores.csv
uci/results/ensembles/: scores.csv
uci/results/ensembles_gelu/: scores.csv
uci/results/mdn/: scores.csv
(+28 files in other folders)
